doc: SEE LICENSE IN LICENSE

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cash"
   ],
   "author": "AJ ONeal <coolaj86@gmail.com> (https://coolaj86.com)",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
     "url": "https://github.com/dashhive/digitalcash.js/issues"
   },
